tests/sema/err_redefine.diag
err_redefine.ax:1:1: error: symbol already defined in this scope
